<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>JVM-internals</artifactId>
        <groupId>ug.inf.malyszczuk.daniel</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>GC_Performance</artifactId>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!--<argLine>-Xmx128M -Xms128M -XX:+UseParallelOldGC</argLine>-->
                    <!--<argLine>-Xmx512M -Xms512M -XX:+UseParallelOldGC</argLine>-->
                    <!--<argLine>-Xmx1024M -Xms1024M -XX:+UseParallelOldGC</argLine>-->

                    <!--<argLine>-Xmx128M -Xms128M -XX:+UseG1GC</argLine>-->
                    <!--<argLine>-Xmx512M -Xms512M -XX:+UseG1GC</argLine>-->
                    <!--<argLine>-Xmx1024M -Xms1024M -XX:+UseG1GC</argLine>-->

                    <!--<argLine>-Xmx128M -Xms128M -XX:+UseConcMarkSweepGC</argLine>-->
                    <!--<argLine>-Xmx512M -Xms512M -XX:+UseConcMarkSweepGC</argLine>-->
                    <argLine>-Xmx1024M -Xms1024M -XX:+UseConcMarkSweepGC</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>